Used the clamp to control the font-size of the output - it adjusts the font-size dynamically, based on the viewport width, staying within the specified range. It helps maintain readability and prevents text from overflowing its container.

--- a/Version-2/styles.css
+++ b/Version-2/styles.css
@@ -33,7 +33,7 @@ body {
   color: var(--secondary);
   height: 60px;
   margin-bottom: 20px;
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 2rem);
   font-weight: 900;
   text-align: right;
   padding: 0 20px;
@@ -42,7 +42,10 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: 100%; 
+  box-sizing: border-box; 
 }
+
 
 
 .btn {
